--- a/Fxfile.yaml
+++ b/Fxfile.yaml
@@ -52,6 +52,7 @@ jobs:
     issueTracker: FxLabs/Stg-GitHub-Bot
     notifications:
       - FxLabs/TeamSlack
+      - FXLabs/shahnotification
   - name: Local
     environment: Local
     tags:
