--- a/Fxfile.yaml
+++ b/Fxfile.yaml
@@ -6,7 +6,7 @@ version: '1'
 name: Fx-Control-Plane
 
 # App description
-description: Fx Testing.
+description: Fx Labs Testing.
 
 # license
 licenses:
